[REACTIVE] Package exclusion fixing, refactor common methods